--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>344</width>
-    <height>382</height>
+    <width>587</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,14 +15,75 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
-    <item row="0" column="1">
+    <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
       <property name="title">
        <string>Partículas</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="3" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox_5">
+       <item row="1" column="2" colspan="2">
+        <widget class="QSpinBox" name="origenx_spinBox">
+         <property name="maximum">
+          <number>500</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Id:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Destino x:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0" colspan="2">
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>Origen en y: </string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="0" colspan="4">
+        <widget class="QPushButton" name="agregar_inicio_pushButton">
+         <property name="text">
+          <string>Agregar Inicio</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2" colspan="2">
+        <widget class="QSpinBox" name="destinoy_spinBox">
+         <property name="maximum">
+          <number>500</number>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="2">
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>Destino y:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="2" colspan="2">
+        <widget class="QSpinBox" name="destinox_spinBox">
          <property name="maximum">
           <number>500</number>
          </property>
@@ -35,30 +96,56 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox_6">
+       <item row="3" column="2" colspan="2">
+        <widget class="QSpinBox" name="origeny_spinBox">
          <property name="maximum">
           <number>500</number>
          </property>
         </widget>
        </item>
-       <item row="4" column="0" colspan="2">
-        <widget class="QLabel" name="label_4">
+       <item row="6" column="2" colspan="2">
+        <widget class="QSpinBox" name="velocidad_spinBox">
+         <property name="maximum">
+          <number>99999</number>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0" colspan="4">
+        <widget class="QPushButton" name="mostrar_pushButton">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Destino x:</string>
+          <string>Mostrar</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0" colspan="4">
+        <widget class="QPushButton" name="agregar_final_pushButton">
+         <property name="text">
+          <string>Agregar Final</string>
          </property>
         </widget>
        </item>
        <item row="7" column="0" colspan="4">
         <widget class="QGroupBox" name="groupBox_2">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="title">
           <string>Colores (rgb):</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
           <item row="3" column="1">
-           <widget class="QSpinBox" name="spinBox_8">
+           <widget class="QSpinBox" name="blue_spinBox">
             <property name="maximum">
-             <number>500</number>
+             <number>255</number>
             </property>
            </widget>
           </item>
@@ -73,16 +160,16 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QSpinBox" name="spinBox_7">
+           <widget class="QSpinBox" name="green_spinBox">
             <property name="maximum">
-             <number>500</number>
+             <number>255</number>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QSpinBox" name="spinBox_9">
+           <widget class="QSpinBox" name="red_spinBox">
             <property name="maximum">
-             <number>500</number>
+             <number>255</number>
             </property>
            </widget>
           </item>
@@ -118,20 +205,6 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" colspan="2">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>Origen en y: </string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox_2">
-         <property name="maximum">
-          <number>500</number>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="0" colspan="2">
         <widget class="QLabel" name="label_2">
          <property name="text">
@@ -139,38 +212,25 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Id:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0" colspan="2">
-        <widget class="QLabel" name="label_5">
-         <property name="text">
-          <string>Destino y:</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox">
-         <property name="maximum">
-          <number>99999</number>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox_3">
-         <property name="maximum">
-          <number>500</number>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="2" colspan="2">
-        <widget class="QSpinBox" name="spinBox_4">
+        <widget class="QSpinBox" name="id_spinBox">
+         <property name="mouseTracking">
+          <bool>false</bool>
+         </property>
+         <property name="tabletTracking">
+          <bool>false</bool>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::WheelFocus</enum>
+         </property>
+         <property name="acceptDrops">
+          <bool>false</bool>
+         </property>
          <property name="layoutDirection">
           <enum>Qt::LeftToRight</enum>
+         </property>
+         <property name="autoFillBackground">
+          <bool>false</bool>
          </property>
          <property name="wrapping">
           <bool>false</bool>
@@ -181,16 +241,36 @@
          <property name="maximum">
           <number>99999</number>
          </property>
-        </widget>
-       </item>
-       <item row="8" column="0" colspan="4">
-        <widget class="QPushButton" name="pushButton">
-         <property name="text">
-          <string>Agregar</string>
+         <property name="displayIntegerBase">
+          <number>10</number>
          </property>
         </widget>
        </item>
       </layout>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPlainTextEdit" name="salida">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+       </font>
+      </property>
+      <property name="toolTipDuration">
+       <number>-1</number>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
      </widget>
     </item>
    </layout>
@@ -200,7 +280,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>344</width>
+     <width>587</width>
      <height>21</height>
     </rect>
    </property>
